// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoList should render with ShallowRenderer 1`] = `
<ul>
  <Todo
    id={1}
    onClick={[Function]}
    text="Learn enzyme"
  />
  <Todo
    completed={true}
    id={2}
    onClick={[Function]}
    text="Learn react-test-renderer"
  />
</ul>
`;

exports[`TodoList should render with TestRenderer 1`] = `
<ul>
  <li
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "textDecoration": "none",
      }
    }
  >
    Learn enzyme
  </li>
  <li
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "textDecoration": "line-through",
      }
    }
  >
    Learn react-test-renderer
  </li>
</ul>
`;

exports[`TodoList should render with mount 1`] = `
<TodoList
  todos={
    Array [
      Object {
        "id": 1,
        "text": "Learn enzyme",
      },
      Object {
        "completed": true,
        "id": 2,
        "text": "Learn react-test-renderer",
      },
    ]
  }
>
  <ul>
    <Todo
      id={1}
      key="1"
      onClick={[Function]}
      text="Learn enzyme"
    >
      <li
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "textDecoration": "none",
          }
        }
      >
        Learn enzyme
      </li>
    </Todo>
    <Todo
      completed={true}
      id={2}
      key="2"
      onClick={[Function]}
      text="Learn react-test-renderer"
    >
      <li
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "textDecoration": "line-through",
          }
        }
      >
        Learn react-test-renderer
      </li>
    </Todo>
  </ul>
</TodoList>
`;

exports[`TodoList should render with render 1`] = `
<ul>
  <li
    style="cursor:pointer;text-decoration:none"
  >
    Learn enzyme
  </li>
  <li
    style="cursor:pointer;text-decoration:line-through"
  >
    Learn react-test-renderer
  </li>
</ul>
`;

exports[`TodoList should render with shallow 1`] = `
<ul>
  <Todo
    id={1}
    key="1"
    onClick={[Function]}
    text="Learn enzyme"
  />
  <Todo
    completed={true}
    id={2}
    key="2"
    onClick={[Function]}
    text="Learn react-test-renderer"
  />
</ul>
`;
